New section  has been added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,27 @@
 
 
     </header>
+    <section id="top">
+        <h2>¿Qué ofrecemos?</h2>
+        <div class="contenedor">
+            <div class="caja">
+                <img src="assets/010-growth.png" alt="">
+                <div class="text"><p>Productividad</p></div>
+            </div>
+            <div class="caja">
+                <img src="assets/016-production.png" alt="">
+                <div class="text"><p>Toma de decisiones</p></div>
+            </div>
+            <div class="caja">
+                <img src="assets/017-project-management.png" alt="">
+                <div class="text"><p>Competitividad</p></div>
+            </div>
+            <div class="caja">
+                <img src="assets/021-solution-1.png" alt="">
+                <div class="text"><p>Eficiencia</p></div>
+            </div>
+        </div>
+    </section>
     <section id="main">
         <div class="contenedor">
             <div class="der">
