--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-
+    <link rel="stylesheet" href="https://use.typekit.net/ets3oos.css">
 
 </head>
 
@@ -41,32 +41,52 @@
         <div class="contenedor">
             <div class="caja">
                 <img src="assets/010-growth.png" alt="">
-                <div class="text"><p>Productividad</p></div>
+                <div class="text">
+                    <p>Productividad</p>
+                </div>
             </div>
             <div class="caja">
                 <img src="assets/016-production.png" alt="">
-                <div class="text"><p>Toma de decisiones</p></div>
+                <div class="text">
+                    <p>Toma de decisiones</p>
+                </div>
             </div>
             <div class="caja">
                 <img src="assets/017-project-management.png" alt="">
-                <div class="text"><p>Competitividad</p></div>
+                <div class="text">
+                    <p>Competitividad</p>
+                </div>
             </div>
             <div class="caja">
                 <img src="assets/021-solution-1.png" alt="">
-                <div class="text"><p>Eficiencia</p></div>
+                <div class="text">
+                    <p>Eficiencia</p>
+                </div>
             </div>
         </div>
     </section>
     <section id="main">
         <div class="contenedor">
-            <div class="der">
-                <h2>Todo bajo control</h2>
-                <p>Mediante nuestro sistema de información tendrás todos los datos acerca de cada animal, teniendo así un proceso más eficiente.</p>
-            </div>
             <div class="izq">
                 <img src="assets/dribbble-cow-shot.gif" alt="">
             </div>
+            <div class="der">
+                <h2>Todo bajo control</h2>
+                <p>Mediante nuestro sistema de información tendrás todos los datos acerca de cada animal, teniendo así
+                    un proceso más eficiente. Podrá registrar cada individuo del ganado y revisar su historia mediante
+                    un árbol genealógico. Lleve un orden completo, mejore su negocio.</p>
+                <button>Vamos</button>
+            </div>
         </div>
+    </section>
+    <section id="facil" style="background: #fafafa">
+        <h2>CONTACTO</h2>
+        <form action="">
+            
+            <input type="text" name="nombre" placeholder="Nombre" id="">
+            <input type="email" name="correo" placeholder="Correo electrónico" id="">
+            <textarea name="textarea" id="" cols="30" rows="10"></textarea>
+        </form>
     </section>
 </body>
 
