Starting with responsive web design, fixing problems

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ets3oos.css">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -78,16 +78,30 @@
                 <button>Vamos</button>
             </div>
         </div>
+        <div class="curva">
+            <img src="assets/descarga.svg" alt="">
+        </div>
     </section>
     <section id="facil" style="background: #fafafa">
-        <h2>CONTACTO</h2>
-        <form action="">
-            
-            <input type="text" name="nombre" placeholder="Nombre" id="">
-            <input type="email" name="correo" placeholder="Correo electrónico" id="">
-            <textarea name="textarea" id="" cols="30" rows="10"></textarea>
-        </form>
+        <div class="contenedor">
+
+            <h2>Contáctanos</h2>
+            <p>Tu opinión es importante</p>
+            <form action="">
+                <div class="icono">
+
+                </div>
+                <p>¿Inquietudes, dudas? Comunícate con nosotros y te responderemos lo más rápido posible.</p>
+                <input type="text" name="nombre" placeholder="Nombre" id="">
+                <input type="email" name="correo" placeholder="Correo electrónico" id="">
+                <textarea name="textarea" id="" placeholder="Mensaje" cols="30" rows="7"></textarea>
+                <button>Enviar</button>
+            </form>
+        </div>
     </section>
+    <footer>
+        <p>Todos los derechos reservados <br> Diseño creado por Andrés Largo <br> Iconos hechos por flaticon de www.flaticon.com </p>
+    </footer>
 </body>
 
 </html>
