--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ets3oos.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/owl.theme.default.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -65,6 +66,13 @@
             </div>
         </div>
     </section>
+    <section id="carousel">
+        <div class="owl-carousel">
+            <div><img src="assets/vaca2.jpg" alt=""></div>
+            <div><img src="assets/vaca1.jpg" alt=""></div>
+            <div><img src="assets/12b.jpg" alt=""></div>
+        </div>
+    </section>
     <section id="main">
         <div class="contenedor">
             <div class="izq">
@@ -100,8 +108,29 @@
         </div>
     </section>
     <footer>
-        <p>Todos los derechos reservados <br> Diseño creado por Andrés Largo <br> Iconos hechos por flaticon de www.flaticon.com </p>
+        <p>Todos los derechos reservados <br> Diseño creado por Andrés Largo <br> Iconos hechos por flaticon de
+            www.flaticon.com </p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script>
+        var owl = $('.owl-carousel');
+        owl.owlCarousel({
+            items: 4,
+            loop: true,
+            margin: 10,
+            autoplay: true,
+            autoplayTimeout: 1000,
+            autoplayHoverPause: true
+        });
+        $('.play').on('click', function () {
+            owl.trigger('play.owl.autoplay', [1000])
+        })
+        $('.stop').on('click', function () {
+            owl.trigger('stop.owl.autoplay')
+        })
+    </script>
 </body>
 
 </html>
