Login has been finished

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,14 +14,16 @@
         <div class="izq">
             <img src="assets/logo.png" alt="">
             <p>INICIAR SESIÓN</p>
-            <form action="">
+            <form action="" style = "margin-top: 1em; margin-bottom: 0.5em">
                 <label for="number" >Ingrese usuario</label>
                 <br>
-                <input type="number">
+                <input type="number" style="margin-bottom: 1.5em">
                 <br>
-                <label for="password">Ingrese la contraseña</label>
+                <label for="password" >Ingrese la contraseña</label>
                 <br>
                 <input type="password">
+                <br>
+                <button>Entrar</button>
             </form>
         </div>
         <div class="der">
