--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <div class="contenido">
                 <h1>La forma más <b>simple</b> y <b>precisa</b> de gestionar <br> su ganado</h1>
                 <div class="botones">
-                    <button>INICIAR</button>
+                    <button> <a href="login.html">Iniciar sesión</a>
+                    </button>
                 </div>
             </div>
 
