--- a/app/email-compose.html
+++ b/app/email-compose.html
@@ -251,7 +251,7 @@
                         <li class="nav-label">Inicio</li>
                         <li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Panel de control <span class="label label-rouded label-primary pull-right">1</span></span></a>
                             <ul aria-expanded="false" class="collapse">
-                                <li><a href="index.html">Ganado </a></li>
+                                <li><a href="index.php">Ganado </a></li>
                              <!--   <li><a href="index1.html">Analytics </a></li> -->
                             </ul>
                         </li>
