Little changes on frontend zone (web page)

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     <section id="main">
         <div class="contenedor">
             <div class="izq">
-                <img src="assets/dribbble-cow-shot.gif" alt="">
+                <div class="verdeclaro">
+                    <img src="assets/cow2.gif" alt="">
+                </div>
             </div>
             <div class="der">
                 <h2>Todo bajo control</h2>
