Left JOIN por data

--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
             <div class="contenido">
                 <h1>La forma más <b>simple</b> y <b>precisa</b> de gestionar <br> su ganado</h1>
                 <div class="botones">
-                    <button> <a href="login.html">Iniciar sesión</a>
+                    <button onclick = "location.href = 'login.html'"> Iniciar sesión
                     </button>
                 </div>
             </div>
 
         </div>
-
-
     </header>
     <section id="top">
         <h2>¿Qué ofrecemos?</h2>
