--- a/backend/Prueba Arbol/index.html
+++ b/backend/Prueba Arbol/index.html
@@ -6,10 +6,11 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="joint.css" />
+    <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
-    <div id="paper">
+    <div id="paper" class="lol" style="width: 800px; height: 600px; overflow: scroll;">
 
     </div>
     <script src="jquery.js"></script>
