--- a/backend/Prueba Arbol/index.html
+++ b/backend/Prueba Arbol/index.html
@@ -10,9 +10,12 @@
    
 </head>
 <body>
-    <div id="paper" class="lol" style="width: 800px; height: 600px; overflow: scroll;">
+    <div style="width: 800px; height: 600px; overflow: scroll;">
+        <div id="paper" class="lol" >
 
+        </div>
     </div>
+    
     <script src="jquery.js"></script>
     <script src="lodash.js"></script>
     <script src="backbone.js"></script>
