--- a/backend/Arbol/index.html
+++ b/backend/Arbol/index.html
@@ -10,7 +10,7 @@
    
 </head>
 <body>
-    <div style="height: 600px; overflow: scroll;">
+    <div style="width: 800px; height: 600px; overflow: scroll;">
         <div id="paper" class="lol" >
 
         </div>
